<resources>
    <string name="app_name">ep1comida</string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="juice">Juice</string>
    <string name="fruits">Fruits</string>
    <string name="search">Search</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="choco_ice">Choco ice</string>

    <string name="best_offer">Best Offer</string>


    <string name="wheat_ice">wheat ice</string>

    <string name="top_list">Top list</string>

    <string name="vegetables_option">Vegetables option</string>
    <string name="drinks">Drinks</string>

    <string name="happy_pack">Happy pack</string>


    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="best_offer_area">best offer area</string>
    <string name="dessert">dessert</string>


    <string name="add_to_card">Add to card</string>
    <string name="home">Home</string>
    <string name="tienda">Tienda</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="contacto">Contacto</string>
    <string name="empleados">Empleados</string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="settings">Settings</string>
    <string name="inicio_sesion">Inicio Sesion</string>
    <string name="perfil">Perfil</string>
    <string name="liked">Liked</string>
    <string name="carrito_de_compras">Carrito de Compras</string>

    <string name="terminosCondiciones">
        Los presentes Términos y Condiciones de servicio regulan la relación contractual entre los usuarios (en adelante, “Usuarios”), con FOODY S.A.C. (RUC No. 20602985971). El servicio se encuentra dirigido exclusivamente a residentes en la República de Perú. Los Usuarios se encontrarán sujetos a los Términos y Condiciones Generales respectivos, junto con todas las demás políticas y principios que rigen FOODY y que son incorporados al presente por referencia.

EL USUARIO DECLARA HABER LEÍDO Y ENTENDIDO TODAS LAS CONDICIONES ESTABLECIDAS N LAS POLÍTICAS DE PRIVACIDAD Y LOS PRESENTES TÉRMINOS Y CONDICIONES GENERALES, Y MANIFIESTA SU CONFORMIDAD Y ACEPTACIÓN AL MOMENTO DE REGISTRARSE Y/O HACER USO DEL APLICATIVO “FOODY”. CUALQUIER PERSONA QUE NO ACEPTE O SE ENCUETRE EN DESACUERDO CON ESTOS TÉRMINOS Y CONDICIONES GENERALES, LOS CUALES TIENEN UN CARÁCTER OBLIGATORIO Y VINCULANTE, DEBERÁ ABSTENERSE DE UTILIZAR EL SITIO Y/O EL APLICATIVO.

La plataforma de FOODY es una herramienta tecnológica que, haciendo uso de internet, facilita la intermediación entre repartidores independientes (en adelante los, “FOODYtenderos”) y los Usuarios que requieren del servicio de reparto mediante el uso de una plataforma tecnológica y móvil de FOODY (en adelante, la “Aplicación”) entendiéndose dicha operación a los efectos de los presentes Términos y Condiciones como el  “Servicio de Reparto”, el cual es ejecutado a través de un contrato de mandato, donde el FOODYtendero actúa como mandatario  y el Usuario funge como mandante en la presente relación. FOODY actúa en todo momento como tercero intermediario entre FOODYtenderos y Usuarios. Asimismo, usted reconoce que FOODY no presta servicios de reparto, mensajería, transporte ni logística. Bajo ninguna circunstancia los FOODYtenderos serán considerados empleados por FOODY ni por ninguno de sus afiliados. Los FOODYtenderos prestan el Servicio por cuenta y riesgo propio y liberan a los Usuarios de cualquier responsabilidad que pudiera surgir durante la prestación del Servicio de Reparto.

CLAUSULA PRIMERA: El Registro

1.1.  El acceso a la Aplicación es gratuito, salvo en lo relativo al costo de la conexión a través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado (ISP) por el Usuario, que estará a su exclusivo cargo. El Usuario únicamente podrá acceder a la Aplicación a través de los medios autorizados.

1.2. Para el acceso a los contenidos de la Aplicación será necesario el registro del Usuario. Por ello, para acceder a los servicios de reparto prestados por los FOODYtenderos, el Usuario deberá contar con un Smartphone con sistema operativo IOS o Android y completar todos los campos del formulario de inscripción correspondiente a los Usuarios con datos válidos (en adelante, el “Usuario Registrado” o en plural “Usuarios Registrados“). Quien aspire a convertirse en Usuario Registrado deberá verificar que la información que pone a disposición de FOODY sea exacta, precisa y verdadera (en adelante, los “Datos Personales“). Asimismo, el Usuario Registrado asumirá el compromiso de actualizar sus Datos Personales cada vez que los mismos sufran modificaciones. FOODY podrá utilizar diversos medios para identificar a los Usuarios Registrados, pero FOODY no se responsabiliza por la certeza de los Datos Personales que sus Usuarios Registrados pongan a su disposición. Los Usuarios Registrados garantizan y responden, en cualquier caso, por la veracidad, exactitud, vigencia y autenticidad de los Datos Personales puestos a disposición de FOODY.

1.3. A los efectos de adquirir la condición de Usuario Registrado de FOODY, el Usuario deberá cumplimentar el formulario de registro, brindar su consentimiento para el tratamiento de sus Datos Personales, aceptar la Política de Privacidad y Tratamiento de Datos Personales, y los presentes Términos y Condiciones.

1.4. Una vez efectuado el Registro, FOODY otorgará al Usuario Registrado una cuenta personal para acceder con la contraseña que elija (en adelante, la “Cuenta”).  El Usuario Registrado accederá a su Cuenta mediante el ingreso de su apodo y clave de seguridad personal elegida. La Cuenta es personal, única e intransferible, y está prohibido que un mismo Usuario Registrado registre o posea más de una Cuenta. En caso que FOODY detecte distintas Cuentas que contengan datos coincidentes o relacionados, podrá cancelar, suspender o inhabilitarlas. El Usuario será el único responsable por el uso de su Cuenta.

1.5. Los Datos Personales introducidos por el Usuario Registrado deberán ser exactos, actuales y veraces en todo momento. FOODY se reserva el derecho de solicitar algún comprobante y/o dato adicional a efectos de corroborar los Datos Personales, y de suspender temporal y/o definitivamente a aquel Usuario Registrado cuyos datos no hayan podido ser confirmados. FOODY NO se responsabiliza por la certeza de los datos consignados en el Registro. El Usuario Registrado garantiza y responde, en cualquier caso, por la veracidad, exactitud, vigencia y autenticidad de sus Datos Personales. Los Datos Personales que el Usuario Registrado proporcione se integrarán en una base de datos personales de la que es responsable FOODY. Para más información consultar la Política de Privacidad y Tratamiento de Datos Personales.

 CLAUSULA SEGUNDA: Condiciones Generales del Uso del Servicio de Reparto

 2.1. El Servicio de Reparto que brindarán los FOODYtenderos se encuentra dirigido exclusivamente para el uso de los Usuarios Registrados.

 2.2. La solicitud de un Servicio de Reparto, sea en forma inmediata o bajo reserva a través de la Aplicación podrá abonarse mediante la plataforma de pagos conocida como PayU, de titularidad de Pagosonline Perú S.A.C. (en adelante, el “Procesador de Pagos”). El procesamiento de pagos estará sujeto a todos los términos y condiciones y políticas de privacidad del Procesador de Pagos, disponibles en su página web https://www.payulatam.com/pe/. FOODY no será responsable por ningún error u omisión cometido por el Procesador de Pagos.

2.3. El Usuario Registrado podrá encontrar en la Aplicación un catálogo de productos ofrecidos por distintos comercios (en adelante, los “Comercios Aliados”), quienes se desempeñan como proveedores independientes y utilizan la Aplicación como medio para ofrecer sus productos. El fin de este catálogo es que el Usuario Registrado pueda dar aviso de manera inmediata a un FOODYtendero que desea el envío de un producto que ofrece un Comercio Aliado.

Sin perjuicio de ello, el Usuario Registrado podrá solicitar a un FOODYtendero el envío de un producto ofrecido por cualquier otro comercio diferente a los Comercios Aliados, siempre y cuando dicho producto respete los presentes términos y condiciones. En este supuesto, el Usuario Registrado deberá abonar adicionalmente al precio del producto, el valor del Servicio de Reparto y un porcentaje (%) adicional sobre el valor del producto por el uso de la plataforma virtual el cual deberá aceptar el Usuario Registrado al momento de realizar la orden.

2.4.. FOODY se reserva la posibilidad de bloquear al Usuario Registrado, por cuestiones de seguridad ante posibilidades de fraude, estafa, uso de datos ajenos, o algún otro supuesto que se desprenda como infracción de los presentes términos y condiciones de uso de la Aplicación. Dicha situación será debidamente comunicada al Usuario Registrado.

2.5. FOODY podrá rechazar y/o frenar cualquier pedido de los Usuarios Registrados, en caso de identificar una infracción al presente Términos y Condiciones.

2.6. Una vez solicitado y/o efectuado una reserva de Servicio de Reparto, la Aplicación enviará un correo electrónico al Usuario Registrado con las condiciones del Servicio de Reparto (en adelante, la “Reserva”). La Reserva incluirá el detalle del destino final donde el FOODYtendero tiene que cumplir el Servicio de Reparto (en adelante, los “Detalles de Entrega”).

2.7. Cualquier cambio en el Servicio de Reparto será informado al Usuario Registrado al teléfono de contacto y/o al correo electrónico informado por el Usuario Registrado en su Cuenta.

2.8. Una vez efectuada la solicitud del Servicio de Reparto, el Usuario Registrado deberá indicar el día, horario y lugar donde comenzará el Servicio de Reparto.

2.9. El FOODYtendero cumplirá el Servicio de Reparto entregando la mercadería a la persona que surge de los Detalles de Entrega, siendo el Usuario Registrado el único responsable por la veracidad de los datos allí introducidos.

2.10. Se encuentra totalmente prohibido utilizar el Servicio de Reparto, para transportar mercadería con fines ilícitos, ilegales, contrarios a lo establecido en los presentes Términos y Condiciones, a la buena fe y al orden público, lesivos de los derechos e intereses de terceros incluyendo, sin limitación, el transporte de material ilegal, que constituya un peligro para la salud o integridad de las personas, o con fines fraudulentos.
    </string>
    <string name="titulo">Titulo</string>

    <string name="mision">Brindar alimentación saludable y deliciosa todos y cada uno de nuestros clientes</string>
    <string name="vision">Ser la starup que mejore la calidad de vida de las personas a travéz de una nutrición saludable</string>
    <string name="misi_n">Misión</string>
    <string name="visi_n">Visión</string>
</resources>