<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_tienda"
        android:title="@string/tienda" >
        <menu >
            <item
                android:id="@+id/nav_perfil"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_liked"
                android:title="@string/liked" />
            <item
                android:id="@+id/nav_carritoCompras"
                android:title="@string/carrito_de_compras" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />

        </menu>
    </item>
    <item
        android:id="@+id/nav_sobre_nosotros"
        android:title="@string/sobre_nosotros" />
    <item
        android:id="@+id/nav_contacto"
        android:title="@string/contacto" />
    <item
        android:id="@+id/nav_empleados"
        android:title="@string/empleados" />
    <item
        android:id="@+id/nav_terminos_condiciones"
        android:title="@string/terminos_y_condiciones" />
    <item
        android:id="@+id/nav_sugerencias"
        android:title="@string/sugerencias" />
</menu>